[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/title.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.207843, 0.309804, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_right = 400.0
margin_bottom = -100.0
custom_constants/separation = 150
alignment = 1

[node name="LabelTitle" type="Label" parent="VBoxContainer"]
margin_top = 125.0
margin_right = 800.0
margin_bottom = 205.0
rect_min_size = Vector2( 0, 80 )
text = "TankGame"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 355.0
margin_right = 800.0
margin_bottom = 535.0
rect_min_size = Vector2( 200, 20 )
custom_constants/margin_right = 200
custom_constants/margin_left = 200

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 200.0
margin_right = 600.0
margin_bottom = 180.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
custom_constants/separation = 30
alignment = 1

[node name="BtnStartGame" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 400.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
focus_neighbour_top = NodePath("../BtnQuit")
focus_neighbour_bottom = NodePath("../BtnSettings")
focus_next = NodePath("../BtnSettings")
focus_previous = NodePath("../BtnQuit")
text = "Start Game"

[node name="BtnSettings" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 400.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 40 )
focus_neighbour_top = NodePath("../BtnStartGame")
focus_neighbour_bottom = NodePath("../BtnQuit")
focus_next = NodePath("../BtnQuit")
focus_previous = NodePath("../BtnStartGame")
text = "Settings"

[node name="BtnQuit" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 400.0
margin_bottom = 180.0
rect_min_size = Vector2( 100, 40 )
focus_neighbour_top = NodePath("../BtnSettings")
focus_neighbour_bottom = NodePath("../BtnStartGame")
focus_next = NodePath("../BtnStartGame")
focus_previous = NodePath("../BtnSettings")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/BtnStartGame" to="." method="_on_BtnStartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/BtnSettings" to="." method="_on_BtnSettings_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
